added the suggestion part of the application

--- a/src/main/resources/static/css/SoupOfWeek.css
+++ b/src/main/resources/static/css/SoupOfWeek.css
@@ -23,6 +23,10 @@
    	font-family: 'Actor';
 	
 }
+.activeNavButton:hover{
+	font-size: 25px;
+	border: solid black 2px;
+}
 .nav-item {
 	font-size: 23px;
 	border: solid black 2px;
