--- a/src/main/resources/static/css/loginPage.css
+++ b/src/main/resources/static/css/loginPage.css
@@ -12,23 +12,24 @@
 .navTitle{
 	font-size: 55px;
 	font-family: 'Aclonica';
-	color: black;
+	color:black;
 }
 .navbar a{
 	text-decoration: none;
 }
 .activeNavButton{
 	font-size: 23px;
-	color: gray;
 	border: solid gray 2px;
    	font-family: 'Actor';
+   	color: gray;
+	
 }
 .nav-item {
 	font-size: 23px;
-	color: black;
 	border: solid black 2px;
     box-shadow: 2px 2px black;
    	font-family: 'Actor';
+   	color: black;
 }
 .activeNavButton:hover{
 	font-size: 25px;
@@ -50,36 +51,47 @@
 	border: solid black 2px;
     box-shadow: 5px 5px black;
 }
-.aboutpageBody{
+.loginpageBody{
 	margin: 0;
     background: linear-gradient(to top, rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('/img/ramen_shop.jpg') no-repeat center center/cover;
-    height: 150vh;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     gap: 25px;
-}
-.chefImg{
-	width:200px;
-	border: solid black 1px;
-}
-.kitchenStaffImg {
-	width:400px;
-	border: solid black 1px;
-}
-.sukiLogoImg {
-	width:200px;
-	border: solid black 1px;
+    color: white;
 }
 h1 {
-	color:white;
 	font-family: 'Aclonica';
-	text-shadow: black 1px 0 10px;
 }
-p {
-	font-size: large;
-	color:white;
-	font-family: 'Actor';
-	text-shadow: black 1px 0 10px;
+form{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	font-family: 'Aclonica';
+	text-shadow: black 2px 0 10px;
+}
+.formSection{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+.emailForm, .passwordForm {
+	background: none; 
+	border: solid 2px black;
+	border-radius: 40px;
+	width: 450px;
+	color: white;
+	font-size: x-large;
+	text-align: center;
+	margin: 15px 0px;
+	box-shadow: 5px 5px black;
+}
+.showPass {
+	margin-top: 15px;
+}
+.submitBtn {
+	margin-top:50px;
+	font-size: larger;
 }
