--- a/src/main/resources/static/css/registerPage.css
+++ b/src/main/resources/static/css/registerPage.css
@@ -31,6 +31,10 @@
    	font-family: 'Actor';
    	color: black;
 }
+.activeNavButton:hover{
+	font-size: 25px;
+	border: solid black 2px;
+}
 .nav-item:hover{
 	font-size: 25px;
 	border: solid black 2px;
@@ -57,4 +61,37 @@
     justify-content: center;
     gap: 25px;
     color: white;
+}
+h1 {
+	font-family: 'Aclonica';
+}
+form{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	font-family: 'Aclonica';
+	text-shadow: black 2px 0 10px;
+}
+.formSection{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+.registerForm {
+	background: none; 
+	border: solid 2px black;
+	border-radius: 40px;
+	width: 450px;
+	margin: 15px; 
+	color: white;
+	font-size: x-large;
+	text-align: center;
+	box-shadow: 5px 5px black;
+}
+.showPass {
+	margin-top: 15px;
+}
+.submitBtn {
+	margin-top:50px;
+	font-size: larger;
 }
