--- a/src/main/resources/static/css/selectDOTW.css
+++ b/src/main/resources/static/css/selectDOTW.css
@@ -49,3 +49,14 @@
 	border: solid black 2px;
     box-shadow: 5px 5px black;
 }
+.dotwpageBody{
+	margin: 0;
+    background: linear-gradient(to top, rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('/img/ramen_shop.jpg') no-repeat center center/cover;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 25px;
+    color: white;
+}
